# meta-hackathon

./: .env.example  API_DOCUMENTATION.md  DEVELOPMENT.md  Dockerfile  README.md  examples_advanced.py  inference.py  main.py  openenv.yaml  pyproject.toml  pytest.ini  requirements-full.txt  requirements.txt  tests_comprehensive.py  validate.py
scripts/: validate-task-graders.py
server/: __init__.py  app.py  config.py  environment.py  exceptions.py  metrics.py  models.py
tasks/: tasks_manifest.json
tasks/easy/: grader.py
tasks/hard/: grader.py
tasks/medium/: grader.py
