[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-finops-auditor"
version = "1.0.0"
description = "OpenEnv-compatible Cloud FinOps & Security Auditor simulator"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "OpenEnv Hackathon Participant" }
]
keywords = ["cloud", "finops", "reinforcement-learning", "optimization", "security", "openenv"]

[project.urls]
Repository = "https://github.com/your-username/cloud-finops-auditor"
Documentation = "https://cloud-finops-auditor.readthedocs.io"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["server"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Too strict, but set to true for max quality
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring (covered by default docstring checks)
    "R0913",  # too-many-arguments (legitimate in some cases)
    "W0212",  # protected-access (legitimate for internal implementation)
]

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --strict-markers --tb=short"
testpaths = ["."]
python_files = ["test_*.py", "tests_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "performance: performance tests",
    "slow: slow tests",
    "api: API tests",
]

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
